tests/ui/resolve/import_glob_conflicts.sol
import "./aux/udvt.sol";
import * from "./aux/udvt2.sol"; //~ ERROR: already declared
